--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "main": "index.js",
+  "scripts": {
+    "start": "nodemon index.js"
+  },
   "dependencies": {
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
